--- a/app/src/main/res/layout/activity_proximity_sensor.xml
+++ b/app/src/main/res/layout/activity_proximity_sensor.xml
@@ -9,4 +9,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hp.hpapp.ProximitySensorActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:src="@android:drawable/btn_star_big_off"
+        android:layout_above="@+id/textView1"
+        android:layout_alignEnd="@+id/textView1" />
 </RelativeLayout>
